<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:title="@string/search_apps"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
    <item
        android:id="@+id/sort_name"
        android:title="@string/sort_name"
        app:showAsAction="never"/>
    <item
        android:id="@+id/sort_size"
        android:title="@string/sort_size"
        app:showAsAction="never"/>
    <item
        android:id="@+id/sort_date"
        android:title="@string/sort_date"
        app:showAsAction="never"/>
</menu>
